<resources>

    <!-- Manifest -->
    <string name="manifest_app">伊甸</string>
    <string name="manifest_login">登录</string>
    <string name="manifest_main">主页</string>
    <string name="manifest_register">注册</string>
    <string name="manifest_forget_password">忘记密码</string>
    <string name="manifest_setting">设置</string>
    <string name="manifest_courier">快递查询</string>
    <string name="manifest_attribution">归属地查询</string>
    <string name="manifest_wechat_web">微信精选详情</string>

    <!-- 主页 -->
    <string name="app_name">伊甸乐园</string>
    <string name="guide_turn_main">进入主页</string>
    <string name="tv_username_login">用户名</string>
    <string name="user_age">年龄</string>
    <string name="user_description">简介</string>
    <string name="tv_password_login">密码</string>
    <string name="tv_password_again">再次输入密码</string>
    <string name="user_email">邮箱</string>
    <string name="email_verify">注册成功，请前往邮箱验证</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="tv_remember_password">记住密码</string>
    <string name="tv_forget_password">忘记密码</string>
    <string name="user_male">男</string>
    <string name="user_female">女</string>
    <string name="auto_user_desc">这个人很懒，什么也没留下</string>
    <string name="reset_password">找回密码</string>
    <string name="reset_by_email">邮箱验证</string>
    <string name="email_send_ok">邮箱验证发送成功</string>
    <string name="email_send_error">邮箱验证发送失败</string>
    <string name="input_no_empty">输入框不能为空</string>
    <string name="on_logging">登录中</string>
    <string name="wechat_image_item">微信精选列表示图</string>
    <string name="wechat_no_data">无数据返回</string>
    <string name="broadcast_remind">提示</string>
    <string name="broadcast_warning">警告</string>
    <string name="broadcast_forced_offline">您已被强制下线，请重新登陆</string>
    <string name="dialog_ok">OK</string>

    <!-- Navigation -->
    <string name="nav_robot_hao">机器人小浩</string>
    <string name="nav_life_butler">您的生活小助手</string>
    <string name="nav_contact_item">常联系</string>
    <string name="nav_courier_item">快递速查</string>
    <string name="nav_weather_item">天气预报</string>
    <string name="nav_attribution_item">归属地查询</string>
    <string name="nav_joke_item">每日一笑</string>
    <string name="nav_translate_item">翻译助手</string>
    <string name="nav_alarm_item">小闹钟</string>
    <string name="nav_settings_item">设置</string>
    <string name="nav_test_item">测试</string>
    <string name="nav_others">其它</string>


    <!-- 个人中心 -->
    <string name="mine_edit_info">编辑资料</string>
    <string name="mine_name">姓名：</string>
    <string name="mine_gender">性别：</string>
    <string name="mine_male">男</string>
    <string name="mine_female">女</string>
    <string name="mine_age">年龄：</string>
    <string name="mine_desc">简介：</string>
    <string name="mine_do_modify">确定修改</string>
    <string name="mine_logistics">物流查询</string>
    <string name="mine_home_location">归属地查询</string>
    <string name="mine_logout">退出登录</string>
    <string name="mine_attribution_query">归属地查询</string>
    <string name="mine_distribution_query">物流查询</string>
    <string name="mine_modify_ok">资料修改成功</string>
    <string name="mine_modify_failed">资料修改失败</string>
    <string name="mine_camera">拍照</string>
    <string name="mine_album">图库</string>
    <string name="mine_cancel">取消</string>
    <string name="mine_album_no_permission">相册打开失败，原因：权限拒绝</string>

    <!-- 归属地查询 -->
    <string name="attribution_phone_query">号码归属地查询</string>
    <string name="attribution_phone_input">输入手机号码查询</string>
    <string name="attribution_query">查询</string>
    <string name="attribution_result">查询结果</string>
    <string name="attribution_number">手机号码：</string>
    <string name="attribution_province">省份:</string>
    <string name="attribution_carrier">运营商:</string>
    <string name="attribution_owner_carrier">归属运营商: </string>
    <string name="attribution_return_null">返回数据为空</string>
    <string name="attribution_no_result">小的能力有限，查询不到...</string>

    <!-- 物流查询 -->
    <string name="distribution_net_access_error">网络访问失败</string>
    <string name="distribution_input_number">请输入快递单号</string>
    <string name="distribution_title">快递查询</string>

    <!-- 小浩陪聊 -->
    <string name="hao_input">输入</string>
    <string name="hao_send">发送</string>
    <string name="hao_no_answer">小浩无应答</string>
    <string name="hao_hello">你好，我是小浩</string>
    <string name="hao_bg_eden">伊甸小管家</string>
    <string name="nav_motto_hao">当你明确了方向，全世界都会为你让路</string>

    <!-- 天气预报 -->
    <string name="weather_china_area">中国</string>
    <string name="weather_temp_symbol">°</string>
    <string name="weather_wind_scale">级</string>
    <string name="weather_percent_dumidity">%</string>
    <string name="weather_pressure_hpa">hPa</string>
    <string name="weather_forecast_comfort">舒适度：</string>
    <string name="weather_forecast_sport">运动：</string>
    <string name="weather_forecast_car_wash">洗车：</string>
    <string name="weather_data_failed">获取天气失败</string>

    <!-- 学习乐园 -->
    <string name="study_hot_header">------------&#062;&#062;今日推荐&#060;&#060;------------</string>


</resources>
