<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="10dp">

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_selector"
        android:text="@string/mine_camera"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_button_selector"
        android:text="@string/mine_album"
        android:textColor="@android:color/white"
        android:textSize="16sp" />


    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_button_selector"
        android:text="@string/mine_cancel"
        android:textColor="@android:color/white"
        android:textSize="16sp" />
</LinearLayout>