<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/attribution_phone_query"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edit_selector"
        android:gravity="center_vertical"
        android:hint="@string/attribution_phone_input"
        android:inputType="phone"
        android:maxLines="1"
        android:paddingEnd="10dp"
        android:paddingStart="10dp" />

    <Button
        android:id="@+id/btn_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_button_selector"
        android:text="@string/attribution_query"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/attribution_result"
        android:textStyle="italic"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingEnd="30dp"
        android:paddingStart="30dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_carrier_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:src="@drawable/icon_question_phone"
            app:civ_border_color="@color/lightGrey"
            app:civ_border_width="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="33dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/attribution_number" />

            <TextView
                android:id="@+id/tv_number"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/attribution_province" />

            <TextView
                android:id="@+id/tv_province"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/attribution_carrier" />

            <TextView
                android:id="@+id/tv_carrier"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/attribution_owner_carrier" />

            <TextView
                android:id="@+id/tv_owner_carrier"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGrey" />
    </LinearLayout>

</LinearLayout>