<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="230dp">

            <ImageView
                android:id="@+id/iv_mine_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_profile"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/mine_add_pic"
                    app:civ_border_color="@color/normalBlue"
                    app:civ_border_overlay="false"
                    app:civ_border_width="1.5dp"
                    app:civ_fill_color="@android:color/transparent" />

                <Button
                    android:id="@+id/btn_edit_mine"
                    android:layout_width="120dp"
                    android:layout_height="38dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_button_selector"
                    android:text="@string/mine_edit_info"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            </LinearLayout>
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_gender"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_age"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:inputType="number"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_desc"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:lines="2"
                android:maxLines="3"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_do_modify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_button_selector"
            android:text="@string/mine_do_modify"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_distribution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/mine_distribution_query"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:background="@color/normalBlue" />

        <TextView
            android:id="@+id/tv_attribution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/mine_attribution_query"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:background="@color/normalBlue" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_button_selector"
            android:text="@string/mine_logout"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>